fixed hori scroll on small screen

--- a/styles.css
+++ b/styles.css
@@ -146,9 +146,15 @@ nav{
 }
 
 @media screen and (max-width: 820px)  {
+    
+    body{
+        /* for making horizontal scroll hidden */
+        overflow-x: hidden;
+    }
     .bottom{
-        height:90px;
+        height:120px;
         padding: 15px;
+        position: fixed;
     }
     .container{
         padding: 34px;
@@ -181,8 +187,14 @@ nav{
         width: 50px;
         margin: 0 23px;
     }
-    
+    .wrapper{
+        /* display: flex; */
+        position: relative;
+        /* justify-content: space-between; */
+       
+    }
     .wrapper .sidebar{
+        position: fixed;
         width:100px;
     }
     .wrapper .sidebar ul li{
